syntax = "proto3";

package blockchain;

service Blockchain {
  rpc GetBlockchain (Empty) returns (BlockchainResponse);
  rpc ReceiveBlock (Block) returns (BlockchainResponse);
  rpc AddBlock (Block) returns (BlockchainResponse);
}

message Empty {}

message BlockchainResponse {
  repeated Block chain = 1;
}

message Block {
  int32 index = 1;
  string timestamp = 2;
  string data = 3;
  string hash = 4;
  string previousHash = 5;
}
